added portfolio projects

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Architect (B.Arch)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <a href="mailto:brundamuralidhar@gmail.com">brundamuralidhar@gmail.com</a></li>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://brundamuralidhar.github.io"/>brundamuralidhar.github.io</a></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://brundamuralidhar.github.io"/>https://brundamuralidhar.github.io</a></li>
                 </ul>
               </div>
             </div>
@@ -365,9 +365,9 @@
             <div class="resume-item">
               <h4>Bachelor's in Architecture (B.Arch)</h4>
               <h5>2014 - 2019</h5>
-              <p><h3>Impact School of Architecture</h3><a href="https://impact.ac.in/wp_isab/">Website</a></p>
+              <p><h3 id="institute-name">Impact School of Architecture</h3><a href="https://impact.ac.in/wp_isab/">Website</a></p>
               <p><i>from the prestigious</i></p>
-              <p><h3>Visvesvaraya Technological University (VTU)</h3><a href="https://vtu.ac.in/">Website</a></p>
+              <p><h3 id="institute-name">Visvesvaraya Technological University (VTU)</h3><a href="https://vtu.ac.in/">Website</a></p>
             </div>
           </div>
         </div>
@@ -450,6 +450,8 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-academic">Academic</li>
+              <li data-filter=".filter-comptetion">Competition</li>
               <li data-filter=".filter-jr-architect">Jr. Architect</li>
               <li data-filter=".filter-internship">Internship</li>
               <li data-filter=".filter-freelance">Freelance</li>
@@ -459,31 +461,31 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-6 col-md-8 portfolio-item filter-jr-architect">
+          <div class="col-lg-6 col-md-8 portfolio-item filter-academic">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-project-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-1/project-1-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-project-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban design"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/project-1/project-1-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Urban intervention, transport oriented development"><i class="bx">view</i></a>
                 <a href="portfolio-project-1.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-8 portfolio-item filter-internship">
+          <div class="col-lg-6 col-md-8 portfolio-item filter-academic">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-project-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-2/project-2-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-project-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/project-2/project-2-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Breathable Café"><i class="bx">view</i></a>
                 <a href="portfolio-project-2.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-10 col-md-8 portfolio-item filter-freelance" id="portfolio-reimagine-urban-spaces">
+          <div class="col-lg-4 col-md-8 portfolio-item filter-comptetion" id="portfolio-reimagine-urban-spaces">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-project-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-3/project-3-1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-project-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imagining public spaces, socio-urban issue"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/project-3/project-3-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Re-imaging Singapura’s public hotspots"><i class="bx">view</i></a>
                 <a href="portfolio-project-3.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
@@ -491,60 +493,40 @@
 
           <div class="col-lg-6 col-md-8 portfolio-item filter-internship">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-4/project-4-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx">view</i></a>
+                <a href="assets/img/portfolio/project-4/project-4-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="The Residence of Harmony"><i class="bx">view</i></a>
                 <a href="portfolio-project-4.html" title="More Details"><i class="bx">open</i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-8 portfolio-item filter-freelance">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx">view</i></a>
-                <a href="portfolio-project-5.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-8 portfolio-item filter-jr-architect">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-5/project-5-3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Office Space"><i class="bx">view</i></a>
-                <a href="portfolio-project-6.html" title="More Details"><i class="bx">open</i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-8 portfolio-item filter-internship">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx">view</i></a>
-                <a href="portfolio-project-7.html" title="More Details"><i class="bx">open</i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-8 portfolio-item filter-internship">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx">view</i></a>
-                <a href="portfolio-project-8.html" title="More Details"><i class="bx">open</i></a>
+                <a href="assets/img/portfolio/project-5/project-5-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Madhu Silks Showroom"><i class="bx">view</i></a>
+                <a href="portfolio-project-5.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-8 portfolio-item filter-freelance">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/project-6/project-6-3.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx">view</i></a>
-                <a href="portfolio-project-9.html" title="More Details"><i class="bx">open</i></a>
+                <a href="assets/img/portfolio/project-6/project-6-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Renovation of Garage into Bakery Store"><i class="bx">view</i></a>
+                <a href="portfolio-project-6.html" title="More Details"><i class="bx">open</i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-8 portfolio-item filter-freelance">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/project-7/project-7-8.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/project-7/project-7-8.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Freelance"><i class="bx">view</i></a>
+                <a href="portfolio-project-7.html" title="More Details"><i class="bx">open</i></a>
               </div>
             </div>
           </div>
@@ -797,14 +779,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
