--- a/portfolio-project-2.html
+++ b/portfolio-project-2.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -97,15 +97,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-project-2.jpg" alt="">
+                  <img src="assets/img/portfolio/project-2/project-2-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-project-1.jpg" alt="">
+                  <img src="assets/img/portfolio/project-2/project-2-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-project-3.jpg" alt="">
+                  <img src="assets/img/portfolio/project-2/project-2-3.png" alt="">
                 </div>
 
               </div>
@@ -120,13 +120,14 @@
                 <li><strong>Category</strong>: Academic</li>
                 <li><strong>Typology</strong>: Interior Design</li>
                 <li><strong>Project Timeline</strong>: 7th sem, 4th yr of B.arch</li>
+                <li><strong>Sustainable approach</strong></li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>   -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Cafe interior design through sustainable materials</h2>
+              <h2>The Breathable Café</h2>
               <p>
-                To design a space for refreshment with an open workstation for students,by bringing in transparency,openness and fluidity in spatial organization through splitting enclosed space into open and semi-open spaces,setting up a breathable space within a campus by using sustainable building materials like pine wood,chappadi stone,wooden logs.
+                To design a space for refreshment with an open workstation for students. This is done by bringing in transparency, openness and fluidity in spatial organization through splitting enclosed space into open and semi-open spaces, setting up a breathable space within a campus by using sustainable building materials like pine wood, chappadi stone, wooden logs.
               </p>
             </div>
           </div>
@@ -142,14 +143,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
