--- a/portfolio-project-3.html
+++ b/portfolio-project-3.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -96,17 +96,9 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div>
+                <!-- <div class="swiper-slide"> -->
+                  <img src="assets/img/portfolio/project-3/project-3-1.png" alt="">
+                <!-- </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -124,9 +116,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>The Singapura Project</h2>
+              <h2>Re-imaging Singapura’s public hotspots</h2>
               <p>
-                To transform an empty site into informative recreational space for government school students and marginalized sector. The project ultimately aims at creating excitement and social engagement among the people through visual mediums via installations,waste segregation units, recycled play areas, water recharge pits forming a potential key to solve socio-urban issue through spatial experimentation.
+                To transform an empty site into informative recreational space for government school students and the marginalized sector. The project ultimately aims at creating excitement and social engagement among the people through visual mediums via installations, waste segregation units, recycled play areas, water recharge pits forming a potential key to solve socio-urban issues through spatial experimentation.
               </p>
             </div>
           </div>
@@ -142,14 +134,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
