--- a/portfolio-project-5.html
+++ b/portfolio-project-5.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -97,15 +97,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/project-5/project-5-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/project-5/project-5-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/project-5/project-5-3.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/project-5/project-5-4.png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/project-5/project-5-5.png" alt="">
                 </div>
 
               </div>
@@ -118,15 +126,16 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Junior Architect</li>
-                <li><strong>Typology</strong>: Renovation and designing of Residence</li>
+                <li><strong>Typology</strong>: Commercial - Saree store</li>
+                <li><strong>Scope</strong>: Interior Design</li>
                 <li><strong>Project Timeline</strong>: 2020 - 2021</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>   -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Residential Building</h2>
+              <h2>Madhu Silks Showroom</h2>
               <p>
-                The challenge was to mask the massing and planning of old and new to emerge into a building profile of oneness.Their requirement was to design a 3bhk attached to their existing 4 bhk building in semi-vernacular architectural style with emphasis on central courtyard, skylights and meditation room, evoking a sense of harmony by using local materials and transcending spatial setup through connectivity.
+                The client's requirement was to design a saree store which unwinds their culturally rich handmade weaving tradition as an interior design concept. As the customers walks into their showroom, the client wanted a feeling of association with their ancestral journey of making sarees. Sensitive lighting not only aided with making the quality of sarees looks grander, but also set them as a brand.
               </p>
             </div>
           </div>
@@ -142,14 +151,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
