--- a/portfolio-project-1.html
+++ b/portfolio-project-1.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -96,17 +96,9 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-project-1.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-project-2.jpg" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-project-3.jpg" alt="">
-                </div>
+                <!-- <div class="swiper-slide"> -->
+                  <img src="assets/img/portfolio/project-1/project-1-1.jpg" alt="">
+                <!-- </div>-->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -126,7 +118,7 @@
             <div class="portfolio-description">
               <h2>Urban intervention, transport oriented development</h2>
               <p>
-                To design a transit point,by connecting all 3 diiferent linear sites by creating a multifunctional space at the city center of bangalore. Interconnection of metro station, mall and office through building and street redesigning.
+                To design a transit point, by connecting all 3 diferent linear sites by creating a multifunctional space at the city center of bangalore. Interconnection of metro station, mall and office through building and street redesigning.
               </p>
             </div>
           </div>
@@ -142,14 +134,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
