--- a/portfolio-project-4.html
+++ b/portfolio-project-4.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -97,15 +97,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/project-4/project-4-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/project-4/project-4-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/project-4/project-4-3.jpg" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/project-4/project-4-4.png" alt="">
                 </div>
 
               </div>
@@ -117,16 +121,20 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Internship</li>
-                <li><strong>Typology</strong>: Office Space</li>
+                <li><strong>Category</strong>: Intern and Junior Architect</li>
+                <li><strong>Typology</strong>: Residence (renovation & redesign)</li>
+                <li><strong>Scope</strong>: Architecture and Project Management</li>
                 <li><strong>Project Timeline</strong>: 2019 - 2020</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>   -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Office Space</h2>
+              <h2>The Residence of Harmony</h2>
               <p>
-                To design a spa.
+                The challenge was to mask the massing and planning of old and new to emerge into a building profile of oneness.
+              </p>
+              <p>
+                Their requirement was to design a 3bhk attached to their existing 4 bhk building in semi-traditional architectural style with emphasis on central courtyard, skylights and meditation room, evoking a sense of harmony by using local materials and transcending spatial setup through connectivity.
               </p>
             </div>
           </div>
@@ -142,14 +150,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
