--- a/portfolio-project-6.html
+++ b/portfolio-project-6.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-1.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/bru_profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Brunda Muralidhar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.instagram.com/brundas_board/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
@@ -97,16 +97,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="assets/img/portfolio/project-6/project-6-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="assets/img/portfolio/project-6/project-6-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="assets/img/portfolio/project-6/project-6-3.png" alt="">
                 </div>
+
 
               </div>
               <div class="swiper-pagination"></div>
@@ -118,15 +119,14 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Junior Architect</li>
-                <li><strong>Typology</strong>: Commercial - Saree Store</li>
-                <li><strong>Project Timeline</strong>: 2020 - 2021</li>
+                <li><strong>Typology</strong>: Renovation of Garage into Bakery Store</li>
+                <li><strong>Project Timeline</strong>: 2020</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>   -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Madhu Saree Stores</h2>
+              <h2>Freelancer</h2>
               <p>
-                The client's requirement was to design a saree store which unwinds their culturally rich handmade weaving tradition as an interior design concept as one walks into their showroom and wants to represent their ancestral journey of delivering saree products of fine quality and pride via branding that's reflected through a sensitive interior approach.
               </p>
             </div>
           </div>
@@ -142,14 +142,14 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span><a href="https://brundamuralidhar.github.io"/>Brunda Muralidhar</a></span></strong>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://bootstrapmade.com/">iPortfolio & BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
